# hex

./: CMakeLists.txt  CalJac.m  CompareAnaAndNum.m  ContinuityCheck.m  DegreeofOperation.m  ExpDataDeal.m  Forward_kinematics.m  Inverse_kinematic.m  JacCheck.m  Jacob.m  Jacobian.m  MotorPos.txt  Tcurve.m  Untitled4.m  WorkSpace.m  WorkingSpaceValume.m  analysisVandH.asv  analysisVandH.m  calEePos.m  compare_prm.m  drawEECurve.m  draw_ee34.m  eeTraj.txt  hex_forward(n=4).txt  hex_forward(n=4,x=0.35).txt  hex_forward.txt  hex_forward_change_prm1.txt  hex_forward_change_prm2.txt  hex_forward_change_prm3.txt  inputTraj.txt  joint_pos_cal.m  leg1EndTraj.txt  leg1EndTraj2.txt  leg1MotorPos.txt  leg1MotorPos1.txt  leg1MotorPos2.txt  main.m  movebody.txt  plotTry.m  single.txt  (+3 more)
Traj_view/: draw_eeTraj.m  eeTraj.txt
code_and_data_for_paper/: ExpDataDeal.m  Forward_kinematics.m  WorkingSpaceValume.m  analysisVandH.m  forward.txt  lateral.txt  turn.txt
compare_prm/: hex_forward.txt  hex_forward_change_pos.txt  hex_forward_change_prm4.txt
data_deal/: CompareAnaAndNum.m  checkInv.m  eeTest.m  inputTest.m  inputVel.m  invInput.txt
matlab_code_for_hex/: EllipticCurve.m  Jacob2.m  VandH.m  plotTry.m
src/: kinematics.cpp  kinematics.h  main.cpp  plan.cpp  plan.h  robot.cpp  robot.h
test1-walk in air/: forward.txt  lateral.txt  turn.txt
小论文中用到的代码和数据/: Inverse_kinematic.m  WorkingSpaceValume.m  forwardSimulationData.mat
数据处理/: CompareAnaAndNum.m  eeTraj.txt  inputTest.m  numInput.txt
